# phylotypy

./: .gitignore  LICENSE  README.md  classifier_accuracy.py  classify.py  cond_prob_optimize.py  dumpster.py  genes_conditional_prob.ipynb  kmers.py  make_model.py  model_config.json  ncbi_taxid_map.csv  phylotypy.py  phylotypy_config.json  pyproject.toml  setup.py  taxa_map.parquet  taxa_map_dic.pkl  traindata.py  training_data.py  vignette.py  vignette2.py
.github/workflows/: python-package.yml  python-publish.yml
data/: ArxA_ref.fasta  dna_moving_pictures.fasta  mvp_classified.csv  orio_16s.txt  rep-seqs-dada2.qzv  rep-seqs.qzv  shewanella.fa  taxonomy_moving_pictures.tsv  test_2_fasta.fa  test_3_fasta.fa  test_4_fasta.fa  test_fasta.fa  unknown_barnesiella.fa
src/: __init__.py
src/phylotypy/: __init__.py  bootstrap.py  classifier.py  classify.py  conditional_prob.py  get_kmer_db.py  kmers.py  make_model.py  phylotypy.py  predict.py  results.py  training_data.py
src/phylotypy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phylotypy/classify_bootstraps/: __init__.py  classify_bootstraps.c  classify_bootstraps.pyx
src/phylotypy/cond_prob_c/: cond_prob_cython.c  cond_prob_cython.pyx
src/phylotypy/utilities/: __init__.py  log.txt  read_fasta.py  utilities.py
test/: test_get_kmers.py  test_phylotypy.py
tests/: log.txt  model_raw.rbf  ref_genera.npy  taxa_ids0.txt  test_bootstrap.py  test_classify.py  test_classify_boostrap_cython.py  test_conditional_prob.py  test_get_kmers.py  test_kmers.py  test_pandarella_code.py  test_phylotypy.py  test_predict.py  test_seq.npy  test_seq.txt  test_training_data.py  test_utilities.py
tests/test_fasta/: test_fasta_short_taxa.fa  test_fasta_suborder.fa
training_data/: README.md
utilities/: make_model.py  read_fasta.py  utilities.py
