[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.21", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cython]
language_level = "3"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]

[project]
name = "phylotypy"
version = "0.2.1"
description = "Naive Bayes Classifier with Rust-accelerated taxonomy functions"
authors = [
    {name = "Chad Saltikov", email = "saltikov@ucsc.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "numba>=0.60",
    "pandas>=2.2",
    "requests",
    "pandarallel",
    "jax",
]

[project.urls]
Homepage = "https://github.com/csaltikov/phylotypy"
Repository = "https://github.com/csaltikov/phylotypy"
"Bug Tracker" = "https://github.com/csaltikov/phylotypy/issues"

[project.optional-dependencies]
test = ["pytest"]
