[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.21", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cython]
language_level = "3"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]

[project]
name = "phylotypy"
version = "0.2.2"
description = "Naive Bayes Classifier for 16S rRNA sequence data"
authors = [
    {name = "Chad Saltikov", email = "saltikov@ucsc.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "numba>=0.60",
    "pandas>=2.2",
    "requests",
    "pandarallel",
    "jax",
]

[project.urls]
Homepage = "https://github.com/csaltikov/phylotypy"
Repository = "https://github.com/csaltikov/phylotypy"
"Bug Tracker" = "https://github.com/csaltikov/phylotypy/issues"

[project.optional-dependencies]
test = ["pytest"]
