[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.21", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cython]
language_level = "3"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]

[project]
name = "phylotypy"
version = "0.2.4"
keywords = [
    "16S rRNA",
    "naive bayes",
    "classifier",
    "phylogeny",
    "metagenomics",
    "microbiome",
    "amplicon",
    "taxonomy",
    "bioinformatics",
    "DADA2",
    "QIIME",
    "RDP",
    "ASV",
    "OTU",
    "microbial ecology",
    "environmental microbiology",
    "sequence classification",
]
description = "Naive Bayes Classifier for 16S rRNA sequence data"
authors = [
    {name = "Chad Saltikov", email = "saltikov@ucsc.edu"}
]
classifiers = [
    # Development status
    "Development Status :: 4 - Beta",

    # Audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",

    # Topics
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    # Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    # License
    "License :: OSI Approved :: MIT License",

    # Operating system
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",

    # Language
    "Natural Language :: English",

    # Programming language used internally
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Cython",
]
readme = "README.md"
python-version = ["3.11", "3.12", "3.13"]
dependencies = [
    "numpy>=2.0",
    "numba>=0.64.0",
    "pandas>=2.2",
    "requests",
    "pandarallel",
]

[project.urls]
Homepage = "https://github.com/csaltikov/phylotypy"
Repository = "https://github.com/csaltikov/phylotypy"
"Bug Tracker" = "https://github.com/csaltikov/phylotypy/issues"

[project.optional-dependencies]
test = ["pytest"]
